# silen

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  PROJECT_STATE.md  README.md  eslint.config.mjs  middleware.ts  package-lock.json  package.json  vitest.config.mts  vitest.integration.config.mts
.claude/rules/: ai-evals.md  backend.md  database.md  frontend.md  git.md  privacy.md  testing.md
docs/decisions/: ADR-0001-stack-and-workflow.md  ADR-0002-schema-gates.md  ADR-template.md
docs/design/: ERD.mermaid  prompts-draft.md  wireframes.html
docs/planning/: 서비스_기획서.md
evals/entities/: fixtures.json  run.py
evals/narration/: fixtures.json  run.py
fixtures/: day-boundary.json
lib/repositories/: authAssumptions.integration.test.ts  supabase.ts  (+8 more)
supabase/: README.md  config.toml
worker/: pyproject.toml
worker/src/silen_worker/: __init__.py  db.py  queue.py  time.py
worker/src/silen_worker/detection/: __init__.py  constants.py  service.py
worker/src/silen_worker/extraction/: __init__.py  gemini.py  service.py
worker/src/silen_worker/narration/: __init__.py  constants.py  gemini.py  service.py
worker/src/silen_worker/tasks/: __init__.py  detect.py  narrate.py  process.py
worker/tests/: conftest.py  test_detect_day_integration.py  test_detection.py  test_detection_repo_integration.py  test_difference_schema_integration.py  test_entity_schema_integration.py  test_extraction.py  test_extraction_integration.py  test_narration.py  test_narration_integration.py  test_narration_schema_integration.py  test_process.py  test_time.py  test_worker_db.py
(+52 files in other folders)
